--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,51 @@
-{% extends 'base.html' %}
-{% block title %}
-    Авторизация
-{% endblock title %}
+{% extends 'sign__.html' %}
+{% block title %} Вход {% endblock title %}
+{% block title_layout %} Вход {% endblock title_layout %} 
+{% block form %}
+
+<form
+    class="form form_login s-form validateble"
+    id="login_form"
+    method="post"
+    data-remote="true"
+>
+{{form.hidden_tag()}}
+  <fieldset class="form__fields">
+    {% from "sign__.html" import form_field, field_errors %}
+    {{form_field(form.email)}}
+      {{form.email.label(for="email_field", class="form__field-label")}}
+      {{form.email(
+        class="form__field-input",
+        value="",
+        autofocus="",
+        type="email",
+        id="email_field",
+      )}}
+      {{field_errors(form.email)}}
+    </div>
+    {{form_field(form.password)}}
+      {{form.password.label(for="password_field", class="form__field-label")}}
+      {{form.password(
+        type="password",
+        value="",
+        class="form__field-input",
+        id="password_field",
+        autocomplete="off",
+      )}}
+      {{field_errors(form.password)}}
+    </div>
+
+    <div class="form__buttons s-buttons">
+      {{form.submit(
+        type="submit",
+        id="registration_button",
+        class="button button_wide button_primary"
+      )}}
+    </div>
+  </fieldset>
+</form>
+{% endblock form %}
+{% block link_to %}
+
+Ещё нет аккаунта?&nbsp;<a href="/register" class="form-additional-message__link">Зарегистрируйтесь</a>
+{% endblock link_to %}
