--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,11 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Beautiful calendar -->
+    <link href="../static/node_modules/air-datepicker/dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
+    <script src="../static/node_modules/air-datepicker/dist/js/datepicker.min.js"></script>
+
     
     <script src="../static/js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
