--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <script src="../static/js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
 
-    <title>{% block title %}{{title}}{% endblock %}</title>
+    <title>{% block title %}MatBoy{% endblock %}</title>
   </head>
 
   <body>
