Started writing api

--- a/templates/register.html
+++ b/templates/register.html
@@ -59,6 +59,7 @@
         type="text",
         
         class="form__field-input datepicker-here",
+        data_timepicker="true",
         id="birthday_field",
         data_position="right top"
       )}}
